fix overlapping comments

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -96,6 +96,7 @@ body {
 	border-radius: 5px;
 	.media-body {
 		word-wrap: break-word;
+		padding-right: 20px;
 	}
 }
 .round {
